Updated register and login